# GameFive

./: README.md
case/: GameFive_Case_Assembly.step  GameFive_Case_Bottom.step  GameFive_Case_Bottom.stl  GameFive_Case_Top.step  GameFive_Case_Top.stl  case_bottom_fusion360.py  case_rebuild_fusion360.py  case_top_fusion360.py
easyeda/: GameFive.epro
fab/: GameFive_BOM.xlsx  GameFive_PickAndPlace.xlsx
firmware/components/gamefive/: CMakeLists.txt
firmware/components/gamefive/include/: gamefive_pins.h  keys.h  lcd.h
firmware/components/gamefive/src/: keys.c  lcd.c
firmware/doom/: CMakeLists.txt  sdkconfig.defaults
firmware/doom/components/oplmusic/: CMakeLists.txt
firmware/doom/components/oplmusic/src/: SDL_stdinc.h  gf_compat.h  opl.c
firmware/doom/components/prboom/: CMakeLists.txt  d_main.c  m_menu.c  r_main.c
firmware/doom/main/: CMakeLists.txt  app_main.c  doom_config.h  i_sound.c  i_system.c  i_video.c  round_lcd.c  round_lcd.h
firmware/hwtest/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/hwtest/main/: CMakeLists.txt  main.c
firmware/launcher/: CMakeLists.txt  sdkconfig.defaults
firmware/launcher/main/: CMakeLists.txt  main.c  store.c  store.h  wifi_prov.c  wifi_prov.h
firmware/roundtest/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/roundtest/main/: CMakeLists.txt  main.c
firmware/snake/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/snake/main/: CMakeLists.txt  main.c
store/: README.md  index.txt
